javascript is now working

--- a/SeaShantyEncyclopedia/static/home.html
+++ b/SeaShantyEncyclopedia/static/home.html
@@ -1,10 +1,19 @@
+<!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"> </script>
     <title>Sea Shanty Encyclopedia</title>
   </head>
 
   <body>
     <p class="test"> Hello World! </p>
+    <div class="dropdown" id="box1">
+      <button onclick="dropdown()"> Title </button>
+      <p> Also known as: </p>
+      <p> Country of origin </p>
+      <p> Language: </p>
+      <p> Description: </p>
+      <p> Lyrics: </p>
   </body>
 </html>
