Drop Down box, hide/show function now working

--- a/SeaShantyEncyclopedia/static/home.html
+++ b/SeaShantyEncyclopedia/static/home.html
@@ -8,8 +8,8 @@
 
   <body>
     <p class="test"> Hello World! </p>
+    <button onclick="dropdown('box1')"> Title </button>
     <div class="dropdown" id="box1">
-      <button onclick="dropdown()"> Title </button>
       <p> Also known as: </p>
       <p> Country of origin </p>
       <p> Language: </p>
